src/test/deca/context/valid/tests/17_MultipleIntwithInit.deca
// Description:
//    Test creation de plusieurs identifiers (int) avec Initialization
//
// Historique:
//    cree le 16/01/2022

{
        int x,y,z = 1;
}
