src/test/deca/context/invalid/54_Equals.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 	Ligne 15: ContextualError: Assignment error
// 
// Historique:
//    cree le 01/01/2022

class A {
}
{
	A a = new A();
	// Doit etre refuse.
	boolean b = a.equals(1);
}
